# KRusty-Grab-125

./: .gitignore  DevelopingUpdates  DevelopingUpdates.md  LICENSE  README.md
krusty_grab/: Cargo.toml
krusty_grab/src/: drawing.rs  icons.rs  krustygrab.rs  lib.rs  main.rs  manage_window.rs
krusty_grab/src/painting/: drawing.rs  icons.rs  mod.rs
krusty_grab/src/painting/images/: icons_source.url
krusty_grab/src/screenshot/: convert_gif.rs  mod.rs  screen_capture.rs
krusty_grab/src/windows/: crop_screen_window.rs  main_window.rs  mod.rs  save_window.rs
