[package]
name = "krusty_grab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
eframe = "0.22.0"
egui = "0.22.0"
global-hotkey = "0.2.3"
keyboard-types = "0.6.2"
serde = {version = "1.0.181", features = ["derive"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
