[package]
name = "krusty_grab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arboard = "3.2.1"
chrono = "0.4.31"
confy = {version = "0.5.1", features = ["yaml_conf"], default-features = false }
eframe = "0.22.0"
egui = {version = "0.22.0", features = ["persistence", "serde"]}
egui_extras = {version="0.22.0", features = ["svg", "image"] }
egui_hotkey = {version="0.2.0", features= ["serde"]}
image = "0.24.7"
keyboard-types = "0.6.2"
native-dialog = "0.6.4"
screenshots = "0.7.1"
serde = {version = "1.0.181", features = ["derive"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"